# ZechCodes

./: .gitignore  README.md  blog-list.html  blog-post.html  index.html  pyproject.toml
IntelliJ Themes/: Arctic_Sea.icls
css/: _home.scss  _main.scss  app.css  app.css.map  app.scss
personal-assets/asteroids/: generate_image.py  pyproject.toml
website/: blog-list.html  index.html
website/css/: app.css.map
website/dockerfiles/: django.Dockerfile  static_site.Dockerfile
website/manifests/: configmap.yaml  django-deployment.yaml  static-deployment.yaml
website/zechcodes/: .dockerignore  manage.py
website/zechcodes/home_page/: urls.py  views.py
website/zechcodes/home_page/static/css/: app.css
website/zechcodes/home_page/templates/: home_page.html
website/zechcodes/zechcodes/: asgi.py  settings.py  urls.py  wsgi.py
website/zechcodes/zechcodes/settings/: __init__.py  development.py
