[tool.poetry]
name = "zech.codes"
version = "0.1.0"
description = "Zech.codes blog and personal site."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
SQLAlchemy = "^1.4.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
